openshift/deployement-uat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: groq-chatbot-uat
  labels:
    app: groq-chatbot
    env: uat
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: groq-chatbot
      env: uat
  template:
    metadata:
      labels:
        app: groq-chatbot
        env: uat
      annotations:
        openshift.io/scc: restricted
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: chatbot
        image: image-registry.openshift-image-registry.svc:5000/armghan18/groq-chatbot:stable
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "750m"
            memory: "768Mi"
          requests:
            cpu: "500m"
            memory: "512Mi"
        readinessProbe:
          httpGet:
            path: /_stcore/health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /_stcore/health
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 25
